--- a/views/registerSingup.ejs
+++ b/views/registerSingup.ejs
@@ -14,6 +14,13 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="display-3 text-center">Register</h2>
+
+            <% if (locals.errorMessage) { %>
+                <div class="alert alert-danger" role="alert">
+                    <%= locals.errorMessage %>
+                </div>
+            <% } %>
+
             <form id="registerForm" action="/register" method="post">
                 <div class="form-group">
                     <label for="firstName">First Name:</label>
