--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -18,14 +18,6 @@
             height: 400px;
         }
 
-        /* Dodati stilove za smanjenje polja za opis /
-        #description {
-            resize: vertical;
-            max-height: 200px; / Promeniti na željenu visinu
-            } */
-        
-
-        /* Dodati stilove za prilagođavanje širine dropdown-a */
         .custom-dropdown {
             width: 100%;
         }
@@ -33,10 +25,26 @@
         .subcategories-container {
             margin-top: 10px;
         }
+
+
+
     </style>
 </head>
 
 <body>
+
+
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <div class="container-fluid d-flex justify-content-between">
+        <button style="margin-top: 20px" onclick="window.location.href='/user_dashboard/logout'" class="btn btn-primary ml-auto">Logout</button>
+    </div>
+</nav>
+
+
+
+<div style="height: 100px"></div>
+
 
 <div class="container mt-4">
     <h2>Unesite Korisnički Izvještaj</h2>
